# crypto-telegram-bot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: command_parsing.cpp  command_parsing.h  constants.h  main.cpp  portfolio_manager.cpp  portfolio_manager.h  price_checker.cpp  price_checker.h  price_watcher.cpp  price_watcher.h  utils.cpp  utils.h
src/commands/: check_conv.cpp  check_conv.h  command.cpp  command.h  convertion.cpp  convertion.h  convertion_command.cpp  help.cpp  help.h  list_conv.cpp  list_conv.h  portfolio.cpp  portfolio.h  portfolio_check.cpp  portfolio_check.h  portfolio_decrease.cpp  portfolio_decrease.h  portfolio_delete.cpp  portfolio_delete.h  portfolio_increase.cpp  portfolio_increase.h  portfolio_inv_decrease.cpp  portfolio_inv_decrease.h  portfolio_inv_increase.cpp  portfolio_inv_increase.h  portfolio_inv_set.cpp  portfolio_inv_set.h  portfolio_list.cpp  portfolio_list.h  portfolio_new.cpp  portfolio_new.h  portfolio_remove.cpp  portfolio_remove.h  portfolio_set.cpp  portfolio_set.h  portfolio_target_set.cpp  portfolio_target_set.h  price.cpp  price.h  price_command.cpp  (+13 more)
src/data/: model.cpp  model.h  persistence.cpp  persistence.h
src/lua_commands/: price.lua  staking_rewards.lua  test.lua  utils.lua
src/scripting/: scripting.cpp  scripting.h
